scripts/style.less
//@background: #87FF99;
//@highlight: #5AC751;
//@border: #0DA700;
@background: gainsboro;
@highlight: #D9D9D9;
@border: gray;
@transition-time: 0.5s;

html,body
{
	margin: 0;
}

body
{
	background: @background;
	font-size: 1em;
	font-family: sans-serif;
	padding: 0 10px 10px 10px;
	overflow-x: hidden;
}

.bordered()
{
	border: @border 1px solid;
	background: white;
}

.button()
{
	height: 42px;
	width: 100px;
	margin: 5px;
	font-size: 0.8em;
	white-space: normal; // allow wrap
	.bordered();

	transition: background-color @transition-time;
	&.selected
	{
		background: @background;
	}
	
	// iOS insists on rounded corners without these
	border-radius: 0;
	-webkit-appearance: none; 

	@media (max-width: 320px)
	{
		margin: 3px;
		padding: 1px;
	}
}

.icon-button()
{
	.button();

	height: auto;
	width: auto;
	margin: 0;
	padding: 3px;
}

a,span
{
	&.neutral-message
	{
		color: #FF7E00; // amber
		fill: #FF7E00;
	}

	&.good-message
	{
		color: green;
		fill: green;
	}

	&.bad-message
	{
		color: red;
		fill: red;
	}
}

svg.icon
{
	height: 16px;
	width: 16px;
	display: block;
	margin: auto;

	&.spinning
	{
		animation: 2s linear infinite spinning;
	}
}

@keyframes spinning
{
	from
	{
		transform: rotate(0);
	}

	to
	{
		transform: rotate(360deg);
	}
}

body > div > div
{
    max-width: 500px;
    margin: auto;
	position: relative;

	header
	{
		font-weight: bold;
	}

	.control()
	{
		.bordered();
		padding: 10px;
		margin-bottom: 10px;
		box-shadow: gray 5px 5px 10px 0;
	}

	.upper-status-section
	{
		display: flex;
		justify-content: space-between;
		align-items: center;
		margin: 10px 0;
	}

	.settings-page-button
	{
		.icon-button();

		svg
		{
			transition: transform @transition-time;
		}

		&.selected svg
		{
			transform: rotate(45deg);
		}
	}

	.sync-status svg
	{
		display: inline-block;
		height: 1em;
		width: 1em;
		vertical-align: middle;
		margin-left: 5px;
	}

	.settings-page-container
	{
		overflow: hidden;
		max-height: 445px; // height when there are 5 items
		transition: max-height @transition-time;

		&.hidden
		{
			max-height: 0;
		}
	}

	.settings-page
	{
		// like a .control(), but without a border and that
		padding: 0 10px 10px 10px;

		& > div
		{
			margin: 20px 0;
		}

		.statuses,.settings
		{
			display: grid;
			grid-template-columns: 1fr 1fr;
			grid-row-gap: 10px;
			grid-column-gap: 10px;
			font-size: 0.8em;

			label
			{
				justify-self: right;
			}

			input[type="checkbox"]
			{
				margin: 0;
			}
		}

		.buttons
		{
			//align buttons to the right
			display: flex;
			flex-direction: column;
			align-items: flex-end;
		}

		button.debug-button
		{
			.button();
			width: 180px;
		}

		 .expenditure-list
		 {
			header
			{
				font-size: 0.8em;
				margin-bottom: 5px;
			}

			div
			{
				overflow-y: scroll;
				max-height: 165px;

				table
				{
					font-size: 0.8em;
					width: 100%;
					border-collapse: collapse;

					tr
					{
						border-bottom: solid 1px gray;
						border-top: solid 1px gray;
					}

					td,th
					{
						text-align: center;
						padding: 5px 5px;
					}
				}
			}
		}
	}

	.input-form-container
	{
		transition: filter @transition-time, transform @transition-time;
		position: absolute;
		width: 100%;

		&.completed
		{
			transform: translateX(-100vw);
		}

		&.next
		{
			transform: translateX(100vw);
		}

		&.disabled
		{
			pointer-events: none;
			filter: brightness(80%);

			&.blur-animation
			{
				filter: blur(2px) brightness(80%);
			}
		}
	}

	.input-form
	{
		.control();

		form > div
		{
			margin-top: 12px;
		}

		.category-section
		{
			.category-group
			{
				display: flex;
				justify-content: space-between;

				.category-button
				{
					.button();
					flex-grow: 1;
				}
			}
		}

		.text-section
		{
			input
			{
				.button();
				width: 150px;
				display: block;
				margin: 5px auto;
				text-align: center;
			}
		}

		.submit-section
		{
			display: flex;
			flex-direction: row-reverse;

			input
			{
				.button();
			}
		}
	}

	.account-status span a
	{
		margin-left: 10px
	}
}

pre.debug-messages
{
	overflow: auto;
	position: absolute;
	left: 0;
	top: 0;
	margin: 0;
	padding: 10px;
	background: white;
	width: 100%;
	height: 100%;
	font-size: 0.7em;
}

